Minor changes: heading margins

--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
                                     </div>
                                 </div>
                                 <div class="control">
-                                    <textarea class="textarea" placeholder="Message"></textarea>
+                                    <textarea class="textarea" placeholder="Kia ora, ..."></textarea>
                                 </div>
                             </div>
                             <a href="index.html" class="button button-primary is-primary">Send</a>
@@ -457,7 +457,13 @@
                 <div class="container">
                     <div class="columns is-variable is-mobile is-8">
                         <div class="column is-one-third">
-
+                            <p class="address">
+                                Line1
+                                <br>
+                                Line2
+                                <br>
+                                Line3
+                            </p>
                         </div>
                         <div class="column is-one-third">
 
@@ -465,7 +471,7 @@
                         <div class="column is-one-third">
                             <!-- Newsletter -->
                             <div class="media-item has-text-right">
-                                <h2 class="heading">Stay in Touch</h2>
+                                <h2 class="title">Stay in Touch!</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna nibh, maximus ut
                                     arcu
                                     et, lobortis rutrum nisi.
