Responsiveness, mixins, etc.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Architects+Daughter|Kirang+Haerang" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.css"> -->
     <link rel="stylesheet" href="node_modules/bulma/css/bulma.min.css">
     <link rel="stylesheet" href="node_modules/bulma-carousel/dist/css/bulma-carousel.min.css">
     <link rel="stylesheet" href="dist/css/main.min.css">
@@ -29,15 +28,13 @@
 
     <!-- Facebook page plugin -->
     <div id="fb-root"></div>
-    <script>
-        (function (d, s, id) {
+    <script>(function (d, s, id) {
             var js, fjs = d.getElementsByTagName(s)[0];
             if (d.getElementById(id)) return;
             js = d.createElement(s); js.id = id;
-            js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.1';
+            js.src = 'https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v3.2';
             fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
-    </script>
+        }(document, 'script', 'facebook-jssdk'));</script>
 
     <!-- Hero landing -->
     <div class="hero is-fullheight landing">
@@ -127,9 +124,12 @@
                             <div class="column">
                                 <div class="blurb">
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus turpis orci, aliquet vitae suscipit ac, ultricies non enim.
-                                        Etiam fermentum, libero sit amet ullamcorper interdum, est magna consectetur nibh,
-                                        sed convallis augue urna feugiat odio. Nunc massa est, lacinia a aliquet ut, interdum
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus turpis orci,
+                                        aliquet vitae suscipit ac, ultricies non enim.
+                                        Etiam fermentum, libero sit amet ullamcorper interdum, est magna consectetur
+                                        nibh,
+                                        sed convallis augue urna feugiat odio. Nunc massa est, lacinia a aliquet ut,
+                                        interdum
                                         pulvinar lacus. Aenean non augue ut tortor viverra dignissim.
                                     </p>
                                     <a href="index.html" class="learn-more">Learn More ></a>
@@ -164,7 +164,8 @@
                                         <p class="title overlay overlay-top-right has-text-right">
                                             Saving Mangamaunu
                                         </p>
-                                        <p class="blurb overlay overlay-middle-right has-text-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                        <p class="blurb overlay overlay-middle-right has-text-right">Lorem ipsum dolor
+                                            sit amet, consectetur adipiscing elit.</p>
                                         <p class="overlay overlay-bottom-left">Learn more ></p>
                                     </a>
                                 </div>
@@ -176,7 +177,8 @@
                                         <p class="title overlay overlay-top-right">
                                             Lyall Bay Carpark
                                         </p>
-                                        <p class="blurb overlay overlay-middle-right has-text-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                        <p class="blurb overlay overlay-middle-right has-text-right">Lorem ipsum dolor
+                                            sit amet, consectetur adipiscing elit.</p>
 
                                         <p class="overlay overlay-bottom-left">Learn more ></p>
                                     </a>
@@ -193,7 +195,8 @@
                                 <!-- Newsletter -->
                                 <div class="media-item">
                                     <h2 class="heading">Newsletter</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna nibh, maximus ut
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna nibh,
+                                        maximus ut
                                         arcu et, lobortis rutrum nisi.
                                     </p>
                                     <div class="field">
@@ -218,7 +221,8 @@
                                 <!-- Membership -->
                                 <div class="media-item">
                                     <h2 class="heading">Membership</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna nibh, maximus ut
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna nibh,
+                                        maximus ut
                                         arcu et, lobortis rutrum nisi.
                                     </p>
                                     <div class="field">
@@ -293,20 +297,21 @@
 
                                 <!-- Facebook -->
                                 <div class="media-item">
-                                    <div class="fb-page" data-href="https://www.facebook.com/Surfbreak-Protection-Society-158580380850950/" data-tabs="timeline"
-                                        data-width="360" data-height="200" data-small-header="false" data-adapt-container-width="true"
-                                        data-hide-cover="false" data-show-facepile="false">
-                                        <blockquote cite="https://www.facebook.com/Surfbreak-Protection-Society-158580380850950/" class="fb-xfbml-parse-ignore">
-                                            <a href="https://www.facebook.com/Surfbreak-Protection-Society-158580380850950/">Surfbreak Protection Society</a>
-                                        </blockquote>
+                                    <div class="fb-page" data-href="https://www.facebook.com/Surfbreak-Protection-Society-158580380850950/"
+                                        data-width="340" data-height="70" data-small-header="false"
+                                        data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+                                        <blockquote cite="https://www.facebook.com/Surfbreak-Protection-Society-158580380850950/"
+                                            class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/Surfbreak-Protection-Society-158580380850950/">Surfbreak
+                                                Protection Society</a></blockquote>
                                     </div>
                                 </div>
-                                    
+
                                 <!-- Instagram -->
                                 <div class="media-item">
                                     <blockquote class="instagram-media" data-instgrm-version="12" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:340px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);">
                                         <div style="padding:16px;">
-                                            <a href="https://www.instagram.com/p/BhvmkYLhbug/?utm_source=ig_embed&amp;utm_medium=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;"
+                                            <a href="https://www.instagram.com/p/BhvmkYLhbug/?utm_source=ig_embed&amp;utm_medium=loading"
+                                                style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;"
                                                 target="_blank">
                                                 <div style=" display: flex; flex-direction: row; align-items: center;">
                                                     <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div>
@@ -317,7 +322,8 @@
                                                 </div>
                                                 <div style="padding: 19% 0;"></div>
                                                 <div style="display:block; height:50px; margin:0 auto 12px; width:50px;">
-                                                    <svg width="50px" height="50px" viewBox="0 0 60 60" version="1.1" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink">
+                                                    <svg width="50px" height="50px" viewBox="0 0 60 60" version="1.1"
+                                                        xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink">
                                                         <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
                                                             <g transform="translate(-511.000000, -20.000000)" fill="#000000">
                                                                 <g>
@@ -360,7 +366,8 @@
 
                                 <!-- Twitter -->
                                 <div class="media-item">
-                                    <a class="twitter-timeline" data-width="340" data-height="200" data-link-color="#00d1b2" href="https://twitter.com/TwitterDev?ref_src=twsrc%5Etfw">Tweets by TwitterDev</a>
+                                    <a class="twitter-timeline" data-width="340" data-height="200" data-link-color="#00d1b2"
+                                        href="https://twitter.com/hollaylayj?ref_src=twsrc%5Etfw">Tweets by hollaylayj</a>
                                     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                                 </div>
                             </div>
@@ -374,10 +381,12 @@
                         <div class="section-container">
                             <h1 class="heading">What We're Working On</h1>
                             <div class="columns is-mobile">
-                                <div class="column is-offset-7">
+                                <div id="responsiveColumn" class="column is-offset-7">
                                     <p class="blurb">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna nibh, maximus ut arcu et, lobortis rutrum nisi. Curabitur
-                                        vitae erat vitae felis eleifend vehicula quis nec tellus. Lorem ipsum dolor sit amet,
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna nibh,
+                                        maximus ut arcu et, lobortis rutrum nisi. Curabitur
+                                        vitae erat vitae felis eleifend vehicula quis nec tellus. Lorem ipsum dolor sit
+                                        amet,
                                         consectetur adipiscing elit.
                                     </p>
                                 </div>
@@ -430,6 +439,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <script type="text/javascript" src="/node_modules/bulma-carousel/dist/js/bulma-carousel.min.js"></script>
                             <a href="index.html" class="button button-primary is-primary">Find Your Region</a>
                         </div>
                     </div>
@@ -439,8 +449,10 @@
                 <section class="contact container has-text-centered">
                     <div class="section-container">
                         <h1 class="heading">Say g'day!</h1>
-                        <p class="blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus turpis orci, aliquet vitae suscipit
-                            ac, ultricies non enim. Etiam fermentum, libero sit amet ullamcorper interdum, est magna consectetur
+                        <p class="blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus turpis orci,
+                            aliquet vitae suscipit
+                            ac, ultricies non enim. Etiam fermentum, libero sit amet ullamcorper interdum, est magna
+                            consectetur
                             nibh, sed convallis augue urna feugiat odio.</p>
                         <div class="contact-form">
                             <div class="contact-form-input">
@@ -514,12 +526,12 @@
                 </section>
             </div>
 
-
+            <!-- Footer -->
             <footer class="hero-foot">
                 <div class="container">
                     <div class="container-padding">
-                        <div class="columns is-variable is-mobile is-8 is-multiline">
-                            <div class="column is-two-fifths">
+                        <div class="columns is-centered is-8 is-multiline">
+                            <div class="column is-two-fifths get-in-touch">
                                 <h2 class="title">Get in Touch!</h2>
                                 <p class="address">
                                     <span>Address Line 1</span>
@@ -529,7 +541,7 @@
                                     <span>03-000-0000</span>
                                 </p>
                             </div>
-                            <div class="column is-one-fifth">
+                            <div class="column is-one-fifth has-text-centered">
                                 <div class="social-media">
                                     <a href="https://www.facebook.com">
                                         <span class="icon is-large">
@@ -547,14 +559,10 @@
                                         </span>
                                     </a>
                                 </div>
-                                <!-- <a href="#" class="button button-primary is-primary">
-                                    <span>Join the Whanau!</span>
-                                </a> -->
-
                             </div>
+                            <!-- Newsletter -->
                             <div class="column is-two-fifths">
-                                <!-- Newsletter -->
-                                <div class="media-item has-text-right">
+                                <div class="media-item has-text-right newsletter">
                                     <h2 class="title">Sign up for Updates!</h2>
                                     <div class="field">
                                         <p class="control has-icons-left">
@@ -594,7 +602,6 @@
         </div>
     </div>
 
-    <script type="text/javascript" src="/node_modules/bulma-carousel/dist/js/bulma-carousel.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="js/main.js"></script>
